--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange{
     color: orange;
 }
 .header{
     display: inline;
 }
-section{
+.flexible-container{
     display: flex;
     padding-bottom: 150px;
 }
@@ -19,7 +22,7 @@ section{
     width: 50%;
     padding-left: 5%;
     padding-right: 100px;
-    text-align: justify;
+    
 }
 .half img{
     width: 80%;
@@ -43,4 +46,20 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right; 
+}
+.experienc-area{
+
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+.experienc-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
 }
